ajustes SQL, CORS e autenticação - 04/10/2023 - Renato Corte

--- a/.env
+++ b/.env
@@ -1,2 +1,8 @@
-PORT=5000
+DB_HOST=0.0.0.0
+DB_PORT=3306
+DB_USER=aplicacao
+DB_PASSWORD=Senha123@
+DB_DATABASE=loja
+DB_TIMEZONE=UTC
+PORT=4000
 TOKEN_SECRET=n3i2Vsw7SU85qZJYu1s6
